# xx_tools

./: .gitmodules  README.md
_compress/: .gitignore  drag_file_here_zstd.bat  zstd_exe_download_url.txt
_pics2loadcode/: CMakeLists.txt
_pics2loadcode/src/: main.cpp  pch.h
_plist2blist/: CMakeLists.txt
_plist2blist/res/: .gitignore  space_shooter.plist  tree.plist  zm.plist
_plist2blist/src/: main.cpp  pch.h
_resmgr/: CMakeLists.txt
_resmgr/res/: res.sqlite3
_resmgr/src/: db.cpp  db.h  looper.cpp  looper.h  pch.cpp  pch.h  scene_main_menu.cpp  scene_main_menu.h  scene_pivot_editor.cpp  scene_pivot_editor.h
_tmx2bmx/: CMakeLists.txt
_tmx2bmx/src/: main.cpp  main.h  pch.h
